--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <div class="container">
         <h1>Welcome to Azure Static Web App</h1>
         <p>This is a simple HTML page deployed on Azure using GitHub integration.</p>
+        <p>I am adding a new line to update the HTML file </p>
     </div>
 </body>
 </html>
